--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@ button:focus-visible {
 .page{
   display: flex;
   flex-direction: column;
-  height: 100vh;
+ min-height: 100vh;
   justify-content: space-between;
 
 }
@@ -75,6 +75,7 @@ header{
 }
 footer{
   background-color: #ffffff;
+  margin-top: 60px;
 
   
 
